--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,5 +1,7 @@
 .headerContent {
-  margin-top: 4.97rem;
+  height: 6rem;
+  max-width: 700px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
 }
