--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -3,3 +3,20 @@
   margin: 4rem auto;
 
 }
+.exitPreview {
+  width: 43.75rem;
+  height: 3.625rem;
+  border-radius: 4px;
+  background: var(--heading);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5rem;
+  cursor: pointer;
+  a {
+    font-size: 1.125rem;
+    font-weight: 600;
+    color: var(--background);
+  }
+}
